--- a/markdown.css
+++ b/markdown.css
@@ -2,7 +2,7 @@ body {
   font-family: "Avenir Next", Arial,'Helvetica Neue',"Microsoft YaHei New","Microsoft Yahei","微软雅黑","宋体",Simsum,STXihei,"华文细黑",sans-serif;
   padding:1em;
   margin-left: 8%;
-  max-width:42em;
+  margin-right: 8%;
   background:#fefefe;
 }
 
