--- a/markdown.css
+++ b/markdown.css
@@ -1,10 +1,13 @@
 body {
   font-family: 'Avenir Next',Avenir,'Helvetica Neue',Helvetica,'Lantinghei SC','Hiragino Sans GB','Microsoft YaHei',"微软雅黑",STHeiti,'WenQuanYi Micro Hei',SimSun,sans-serif;
-  padding:1em;
-  margin-left: 8%;
-  margin-right: 8%;
   background:#fefefe;
   color: #555
+}
+#md{
+  padding:1em;
+  margin-left: 4%;
+  margin-right: 4%;
+  width: 72%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -106,7 +109,15 @@ pre > code {
 .server { color:#7799bb; }
 .error { color:#AA0000; }
 
-
+#toc {
+  float: right;
+  max-width: 20%;
+  position: fixed;
+  top: 2%;
+  right: 2%;
+  overflow: scroll;
+  max-height: 95%;
+}
 
 
 
