--- a/markdown.css
+++ b/markdown.css
@@ -1,6 +1,7 @@
 body {
-    /*font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, 'Lantinghei SC', 'Hiragino Sans GB', 'Microsoft YaHei', "微软雅黑", STHeiti, 'WenQuanYi Micro Hei', SimSun, sans-serif;*/
-    font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans","wenquanyi micro hei","Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;;
+    /* font-family: 'Avenir Next', Avenir, 'Helvetica Neue', Helvetica, 'Lantinghei SC', 'Hiragino Sans GB', 'Microsoft YaHei', "微软雅黑", STHeiti, 'WenQuanYi Micro Hei', SimSun, sans-serif;
+    */
+    font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;
     background-color: #E0E0E0;
     color: #555;
     -webkit-font-smoothing: antialiased;
@@ -11,7 +12,8 @@ body {
     font-weight: 500;
     -webkit-box-sizing: padding-box;
     -moz-box-sizing: padding-box;
-        box-sizing: padding-box;}
+    box-sizing: padding-box;
+}
 h1, h2, h3, h4, h5, h6 {
     font-weight: 800;
     text-rendering: optimizelegibility;
@@ -63,12 +65,11 @@ a, a:visited {
 }
 a:hover {
     -webkit-transition: 0.5s;
-       -moz-transition: 0.5s;
-         -o-transition: 0.5s;
-            transition: 0.5s;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
     text-decoration: underline;
 }
-
 button {
     font-size: 10pt;
     padding: 4px 6px;
@@ -111,15 +112,15 @@ pre {
 }
 pre, blockquote {
     -webkit-transition: 0.5s;
-       -moz-transition: 0.5s;
-         -o-transition: 0.5s;
-            transition: 0.5s;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
 }
-pre:hover, blockquote:hover  {
+pre:hover, blockquote:hover {
     -webkit-transition: 0.5s;
-       -moz-transition: 0.5s;
-         -o-transition: 0.5s;
-            transition: 0.5s;
+    -moz-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
     -webkit-box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.5);
     -moz-box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.5);
     box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.5);
@@ -141,10 +142,9 @@ blockquote {
     border-left-style: solid;
     border-left-width: 10px;
     margin: 0 0 20px;
-    background: none repeat scroll 0 0 rgba(102,128,153,.25);
+    background: none repeat scroll 0 0 rgba(102, 128, 153, .25);
     border-left: 5px solid #989A9C;
 }
-
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -163,7 +163,7 @@ table tr {
     background-color: rgba(205, 205, 205, 0.17);
     border-top: 1px solid #ccc;
 }
-table tr:nth-child(2n)  {
+table tr:nth-child(2n) {
     background-color: #f8f8f8;
 }
 thead {
